console ausgebe -> gui